# eigen-backend

./: .env-example  .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/: llm_provider.py  main.py  request_models.py  response_models.py  settings.py  store.py  tools.py
backend/tests/: conftest.py  test_health.py
